# django-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_server/: __init__.py  apps.py  constants.py  decorators.py  registry.py  schema.py  urls.py  views.py
